# FullBitAdder

./: .gitignore  Full Bit Adder.sln  README.md
full_bit_adder/: CMakeLists.txt  binary.h  full_bit_adder.vcxproj  full_bit_adder.vcxproj.filters  main.c  octal.h
full_bit_adder/include/: hexadecimal.h
full_bit_adder/src/: binary.c  hexadecimal.c  main.c  octal.c
practice_project/: full_bit_adder.c  intersection.c  practice_project.vcxproj  practice_project.vcxproj.filters
